eSASS: added parallel processing to the tutorial

--- a/eROSITA_eSASS_Tutorials/01_Introduction_and_Setup.ipynb
+++ b/eROSITA_eSASS_Tutorials/01_Introduction_and_Setup.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,7 @@
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import curve_fit\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
     "import os\n",
     "from tqdm import tqdm\n",
     "import warnings\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_evtool(input_name, output_name, gti_type='GTI', flag_type='0xe00fff30', pattern='15', emin='0.2', emax='10.0', image='no', events='yes', telid='1 2 3 4 5 6 7', log_file=None):\n",
+    "def run_evtool(input_name, output_name, log_file=None, gti_type='GTI', flag_type='0xe00fff30', pattern='15', emin='0.2', emax='10.0', image='no', events='yes', telid='1 2 3 4 5 6 7'):\n",
     "    subprocess.run(['evtool', \n",
     "                    f'eventfiles={input_name}', \n",
     "                    f'outfile={output_name}', \n",
@@ -137,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:08<00:00,  2.12s/it]"
+      "100%|██████████| 4/4 [00:04<00:00,  1.06s/it]"
      ]
     },
     {
@@ -163,20 +164,21 @@
     }
    ],
    "source": [
-    "with open('Data/Filtered_data/evtool_s01.log', 'w+') as log_file:    \n",
-    "    for tile in tqdm(range(len(elist))):   \n",
-    "        run_evtool(elist[tile], clean_list[tile], log_file=log_file)\n",
-    "        # center_ra = fits.getval(clean_list[tile], \"RA_CEN\", ext=1)\n",
-    "        # center_dec = fits.getval(clean_list[tile], \"DEC_CEN\", ext=1)\n",
-    "        # run_radec2xy(clean_list[tile], center_ra, center_dec, log_file=log_file)\n",
+    "log_file_s01 = 'Data/Filtered_data/evtool_s01.log'\n",
+    "with open(log_file_s01, 'w+') as log_file:\n",
+    "    pass\n",
     "\n",
-    "    log_file.seek(0)\n",
+    "def par_evtool_s01(tile):\n",
+    "    with open(log_file_s01, 'a') as log_file:\n",
+    "        run_evtool(elist[tile], clean_list[tile], log_file=log_file)\n",
+    "\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    list(tqdm(executor.map(par_evtool_s01, range(len(elist))), total=len(elist)))\n",
+    "\n",
+    "with open(log_file_s01, 'r') as log_file:\n",
     "    log_content = log_file.readlines()\n",
     "    evtool_count = sum(1 for line in log_content if 'evtool: DONE' in line)\n",
-    "    # radec2xy_count = sum(1 for line in log_content if 'radec2xy: DONE' in line)\n",
-    "    print(f'evtool finished successfully for {evtool_count} out of {len(elist)} files ({evtool_count/len(elist)*100}%)')\n",
-    "    # print(f'radec2xy finished successfully for {radec2xy_count} out of {len(elist)} files ({radec2xy_count/len(elist)*100}%)')\n",
-    "    "
+    "    print(f'evtool finished successfully for {evtool_count} out of {len(elist)} files ({evtool_count/len(elist)*100}%)')\n"
    ]
   },
   {
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:02<00:00,  1.57it/s]"
+      "100%|██████████| 4/4 [00:00<00:00,  6.70it/s]"
      ]
     },
     {
@@ -235,11 +237,18 @@
     }
    ],
    "source": [
-    "with open('Data/Filtered_data/Lightcurves/flaregti_s02.log', 'w+') as log_file:\n",
-    "    for tile in tqdm(range(len(elist))):   \n",
+    "log_file_s02 = 'Data/Filtered_data/Lightcurves/flaregti_s02.log'\n",
+    "with open(log_file_s02, 'w+') as log_file:\n",
+    "    pass\n",
+    "\n",
+    "def par_flaregti_s02(tile):\n",
+    "    with open(log_file_s02, 'a') as log_file:\n",
     "        run_flaregti(clean_list[tile], lightcurve0_list[tile], log_file=log_file)\n",
-    "    \n",
-    "    log_file.seek(0)\n",
+    "\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    list(tqdm(executor.map(par_flaregti_s02, range(len(elist))), total=len(elist)))\n",
+    "\n",
+    "with open(log_file_s02, 'r') as log_file:\n",
     "    log_content = log_file.readlines()\n",
     "    flaregti_count = sum(1 for line in log_content if 'flaregti: DONE' in line)\n",
     "    print(f'flaregti finished successfully for {flaregti_count} out of {len(elist)} files ({flaregti_count/len(elist)*100}%)')"
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,33 +347,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  2.37it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00,  8.84it/s]\n"
      ]
     }
    ],
    "source": [
     "tile_thresholds = np.zeros(len(lightcurve0_list))\n",
-    "for tile in tqdm(range(len(lightcurve0_list))):   \n",
-    "    tile_thresholds[tile]=threshold_lightcurve(lightcurve0_list[tile], image=True)"
+    "\n",
+    "def par_threshold(tile):\n",
+    "    return threshold_lightcurve(lightcurve0_list[tile], image=True)\n",
+    "\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    results = list(tqdm(executor.map(par_threshold, range(len(lightcurve0_list))), total=len(lightcurve0_list)))\n",
+    "\n",
+    "tile_thresholds[:] = results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -388,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  2.48it/s]"
+      "100%|██████████| 4/4 [00:00<00:00,  9.28it/s]"
      ]
     },
     {
@@ -414,11 +422,18 @@
     }
    ],
    "source": [
-    "with open('Data/Filtered_data/Lightcurves/flaregti_s03.log', 'w+') as log_file:\n",
-    "    for tile in tqdm(range(len(elist))):   \n",
+    "log_file_s03 = 'Data/Filtered_data/Lightcurves/flaregti_s03.log'\n",
+    "with open(log_file_s03, 'w+') as log_file:\n",
+    "    pass\n",
+    "\n",
+    "def par_flaregti_s03(tile):\n",
+    "    with open(log_file_s03, 'a') as log_file:\n",
     "        run_flaregti(clean_list[tile], lightcurve_list[tile], threshold = tile_thresholds[tile],log_file=log_file)\n",
-    "    \n",
-    "    log_file.seek(0)\n",
+    "\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    list(tqdm(executor.map(par_flaregti_s03, range(len(elist))), total=len(elist)))\n",
+    "\n",
+    "with open(log_file_s03, 'r') as log_file:\n",
     "    log_content = log_file.readlines()\n",
     "    flaregti_count = sum(1 for line in log_content if 'flaregti: DONE' in line)\n",
     "    print(f'flaregti finished successfully for {flaregti_count} out of {len(elist)} files ({flaregti_count/len(elist)*100}%)')"
@@ -433,14 +448,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:02<00:00,  1.74it/s]"
+      "100%|██████████| 4/4 [00:02<00:00,  1.73it/s]"
      ]
     },
     {
@@ -459,11 +474,18 @@
     }
    ],
    "source": [
-    "with open('Data/Filtered_data/evtool_s04.log', 'w+') as log_file:    \n",
-    "    for tile in tqdm(range(len(elist))):   \n",
+    "log_file_s04 = 'Data/Filtered_data/evtool_s04.log'\n",
+    "with open(log_file_s04, 'w+') as log_file:\n",
+    "    pass\n",
+    "\n",
+    "def par_evtool_s04(tile):\n",
+    "    with open(log_file_s04, 'a') as log_file:\n",
     "        run_evtool(clean_list[tile], filtered_list[tile], gti_type=\"FLAREGTI\", log_file=log_file)\n",
     "\n",
-    "    log_file.seek(0)\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    list(tqdm(executor.map(par_evtool_s04, range(len(elist))), total=len(elist)))\n",
+    "\n",
+    "with open(log_file_s04, 'r') as log_file:\n",
     "    log_content = log_file.readlines()\n",
     "    evtool_count = sum(1 for line in log_content if 'evtool: DONE' in line)\n",
     "    print(f'evtool finished successfully for {evtool_count} out of {len(clean_list)} files ({evtool_count/len(clean_list)*100}%)')"
@@ -471,11 +493,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "proof_check = False"
+    "proof_check = True"
    ]
   },
   {
@@ -487,9 +509,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00,  8.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flaregti finished successfully for 4 out of 4 files (100.0%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:01<00:00,  3.43it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "if proof_check:\n",
     "    if not os.path.exists('Data/Filtered_data/Lightcurves/Proof_check'):\n",
@@ -500,11 +544,18 @@
     "    for i in range(len(filtered_list)):\n",
     "        pc_lightcurve_list[i] = 'Data/Filtered_data/Lightcurves/Proof_check/'+filtered_list[i].split('/')[-1].replace('s04_FlareFilteredEvents.fits',f's041_pcLC_tb{timebin}.fits')\n",
     "\n",
-    "    with open('Data/Filtered_data/Lightcurves/Proof_check/flaregti_s041.log', 'w+') as log_file:\n",
-    "        for tile in tqdm(range(len(elist))):   \n",
+    "    log_file_s041 = 'Data/Filtered_data/Lightcurves/Proof_check/flaregti_s041.log'\n",
+    "    with open(log_file_s041, 'w+') as log_file:\n",
+    "        pass\n",
+    "\n",
+    "    def par_flaregti_s041(tile):\n",
+    "        with open(log_file_s041, 'a') as log_file:\n",
     "            run_flaregti(filtered_list[tile], pc_lightcurve_list[tile], log_file=log_file)\n",
-    "        \n",
-    "        log_file.seek(0)\n",
+    "\n",
+    "    with ProcessPoolExecutor() as executor:\n",
+    "        list(tqdm(executor.map(par_flaregti_s041, range(len(elist))), total=len(elist)))\n",
+    "\n",
+    "    with open(log_file_s041, 'r') as log_file:\n",
     "        log_content = log_file.readlines()\n",
     "        flaregti_count = sum(1 for line in log_content if 'flaregti: DONE' in line)\n",
     "        print(f'flaregti finished successfully for {flaregti_count} out of {len(elist)} files ({flaregti_count/len(elist)*100}%)')\n",
@@ -522,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
