--- a/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
+++ b/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,8 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "def exp_corr(input_image, input_expmap, output_name):\n",
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,42 +376,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [30:53<00:00, 617.97s/it]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "All evtool and expmap tasks completed successfully\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
-    "with open('../Data/Images/RGB/merged_image_RGB.log', 'w+') as log_file:\n",
-    "    for band in tqdm(bands):\n",
-    "        output_image = f'../Data/Images/RGB/merged_image_{band[0]}_{band[1]}.fits'\n",
-    "        output_expmap = f'../Data/Images/RGB/merged_expmap_{band[0]}_{band[1]}.fits'\n",
-    "        output_exp_corr = f'../Data/Images/RGB/merged_exp_corr_{band[0]}_{band[1]}.fits'\n",
-    "        \n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "\n",
+    "log_file_path = '../Data/Images/RGB/merged_image_RGB.log'\n",
+    "with open(log_file_path, 'w+') as log_file:\n",
+    "    pass\n",
+    "\n",
+    "def process_band(band):\n",
+    "    output_image = f'../Data/Images/RGB/merged_image_{band[0]}_{band[1]}.fits'\n",
+    "    output_expmap = f'../Data/Images/RGB/merged_expmap_{band[0]}_{band[1]}.fits'\n",
+    "    output_exp_corr = f'../Data/Images/RGB/merged_exp_corr_{band[0]}_{band[1]}.fits'\n",
+    "    \n",
+    "    with open(log_file_path, 'a') as log_file:\n",
     "        run_evtool(event_file, output_image, band[0]/1000, band[1]/1000, log_file=log_file)\n",
     "        run_expmap(event_file, output_image, output_expmap, band[0]/1000, band[1]/1000, log_file=log_file)\n",
     "        exp_corr(output_image, output_expmap, output_exp_corr)\n",
-    "    log_file.seek(0)\n",
+    "\n",
+    "with ProcessPoolExecutor() as executor:\n",
+    "    executor.map(process_band, bands)\n",
+    "\n",
+    "with open(log_file_path, 'r') as log_file:\n",
     "    log_content = log_file.readlines()\n",
     "    evtool_count = sum(1 for line in log_content if 'evtool: DONE' in line)\n",
     "    expmap_count = sum(1 for line in log_content if 'expmap: DONE' in line)\n",
@@ -521,7 +521,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "heasoft_6.31",
+   "display_name": "heasoft_6.34",
    "language": "python",
    "name": "python3"
   },
@@ -535,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
