--- a/eROSITA_eSASS_Tutorials/Spectra/03_Extract_Spectra.ipynb
+++ b/eROSITA_eSASS_Tutorials/Spectra/03_Extract_Spectra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=930203</i>\n",
-       "<table id=\"table135172083914144\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table130370345044432\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>IAUName</th><th>SkyTile</th><th>RA_ICRS</th><th>DE_ICRS</th><th>GLAT</th><th>ELON</th><th>FSPSNR</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>deg</th><th>deg</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes23</th><th>int32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int16</th></tr></thead>\n",
@@ -96,7 +96,7 @@
        "1eRASS J080015.4+155636  122075 120.06423130741 ... 118.89489345340122      0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "    [(85.55021296, 20.20636293), (81.66400501, 23.80665032)]>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,21 +179,21 @@
     "              (cat['DE_ICRS'] >= dec_min) & (cat['DE_ICRS'] <= dec_max)]\n",
     "\n",
     "with open('../Data/Spectrum/cat_deg.reg', 'w') as f:\n",
-    "    f.write('fk5\\n')\n",
+    "    # f.write('fk5\\n')\n",
     "    for row in cat_cut:\n",
     "        f.write(f'circle({row[\"RA_ICRS\"]},{row[\"DE_ICRS\"]},50\") # color=red\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "cat_src = cat[distance < 500/3600 * u.deg]\n",
     "\n",
     "with open('../Data/Spectrum/src_deg.reg', 'w') as f:\n",
-    "    f.write('fk5\\n')\n",
+    "    # f.write('fk5\\n')\n",
     "    f.write(f'circle({coord_obj.ra.deg},{coord_obj.dec.deg},500\") # color=white\\n')\n",
     "    for row in cat_src:\n",
     "        f.write(f'-circle({row[\"RA_ICRS\"]},{row[\"DE_ICRS\"]},50\") # color=red\\n')"
@@ -201,23 +201,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "cat_bg = cat[(distance >= 1000/3600 * u.deg) & (distance < 2500/3600 * u.deg)]\n",
     "\n",
     "with open('../Data/Spectrum/bg_deg.reg', 'w') as f:\n",
-    "    f.write('fk5\\n')\n",
+    "    # f.write('fk5\\n')\n",
     "    f.write(f'annulus({coord_obj.ra.deg},{coord_obj.dec.deg},1000\", 2500\") # color=green\\n')\n",
     "    for row in cat_bg:\n",
     "        f.write(f'-circle({row[\"RA_ICRS\"]},{row[\"DE_ICRS\"]},50\") # color=red\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate spectra, ARFs, and RMFs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_srctool(eventfiles, srccoord, prefix, srcreg, backreg, tstep=0.5, xgrid=1, log_file=None):\n",
+    "    subprocess.run(['srctool',\n",
+    "                    f'eventfiles={eventfiles}',\n",
+    "                    f'srccoord={srccoord}',\n",
+    "                    f'prefix={prefix}',\n",
+    "                    'todo=SPEC ARF RMF',\n",
+    "                    'insts=1 2 3 4 6',  # read from TM12346 only\n",
+    "                    'writeinsts=8',  # write spectra of individual TMs as well as TM8\n",
+    "                    f'srcreg={srcreg}',\n",
+    "                    f'suffix=_ts{tstep}_xg{xgrid}.fits',\n",
+    "                    f'backreg={backreg}',  # we don't need a spectrum from a background region as we are interested in the astrophysical background ourselves, not sources on top of the background\n",
+    "                    'exttype=TOPHAT',  # assume the source is uniformly bright to estimate the effective area\n",
+    "                    'extpars=15500',  # approximate diameter of the tophat circle that will cover the full spectral extraction region (in arcsec)\n",
+    "                    f'tstep={tstep}',  # time step for the light curve\n",
+    "                    f'xgrid={xgrid}',  # these numbers are the trade-off between accuracy and time.\n",
+    "                    'psftype=NONE',  # do not correct for psf\n",
+    "                    'pat_sel=15',  # all valid patterns\n",
+    "                    'clobber=yes'\n",
+    "                    ],\n",
+    "                   stdout=log_file,\n",
+    "                   stderr=log_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "srctool tasks completed successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../Data/Spectrum/Spec_SRC_BG_log.txt', 'w+') as log_file:\n",
+    "\n",
+    "    run_srctool('../Data/Filtered_data/Merged/Merged_020_s05_TM0_Events.fits', \n",
+    "                'icrs; 83.63240,+22.01740',\n",
+    "                '../Data/Spectrum/Spec_Src_', \n",
+    "                '../Data/Spectrum/src_deg.reg', \n",
+    "                '../Data/Spectrum/bg_deg.reg', log_file=log_file)\n",
+    "    \n",
+    "    log_file.seek(0)\n",
+    "    log_content = log_file.readlines()\n",
+    "    srctool_count = sum(1 for line in log_content if 'srctool: DONE' in line)\n",
+    "    if srctool_count == 1:\n",
+    "        print('srctool tasks completed successfully')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "heasoft_6.34",
+   "display_name": "heasoft_6.31",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
