eSASS: Corrected size to auto for imaging

--- a/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
+++ b/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_evtool(input_name, output_name, emin, emax, gti_type='FLAREGTI', flag_type='0xe00fff30', pattern='15', telid='1 2 3 4 5 6 7', log_file=None):\n",
+    "def run_evtool(input_name, output_name, emin, emax, gti_type='FLAREGTI', flag_type='0xe00fff30', size='auto', pattern='15', telid='1 2 3 4 5 6 7', log_file=None):\n",
     "    subprocess.run(['evtool', \n",
     "                    f'eventfiles={input_name}', \n",
     "                    f'outfile={output_name}', \n",
@@ -98,7 +98,8 @@
     "                    f'emax={emax}',\n",
     "                    f'image=yes',\n",
     "                    f'events=no',\n",
-    "                    f'telid={telid}'\n",
+    "                    f'telid={telid}',\n",
+    "                    f'size={size}'\n",
     "                    ],\n",
     "                    stdout=log_file,\n",
     "                    stderr=log_file)\n",
