eSASS: changed events to yes in evtool while creating images for further steps

--- a/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
+++ b/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
@@ -97,7 +97,7 @@
     "                    f'emin={emin}', \n",
     "                    f'emax={emax}',\n",
     "                    f'image=yes',\n",
-    "                    f'events=no',\n",
+    "                    f'events=yes',\n",
     "                    f'telid={telid}',\n",
     "                    f'size={size}'\n",
     "                    ],\n",
