--- a/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
+++ b/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "                    f'eventfiles={input_name}', \n",
     "                    f'outfile={output_name}', \n",
     "                    f'gti={gti_type}', \n",
-    "                    f'flag={flag_type}', \n",
+    "                    # f'flag={flag_type}', \n",
     "                    f'pattern={pattern}', \n",
     "                    f'emin={emin}', \n",
     "                    f'emax={emax}',\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "heasoft_6.34",
+   "display_name": "heasoft_6.31",
    "language": "python",
    "name": "python3"
   },
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
