--- a/eROSITA_eSASS_Tutorials/Imaging/022_PTS_removal.ipynb
+++ b/eROSITA_eSASS_Tutorials/Imaging/022_PTS_removal.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,14 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "from astropy.coordinates import SkyCoord\n",
+    "import cv2\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,21 +312,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 429/429 [08:40<00:00,  1.21s/it]\n"
+      "100%|██████████| 439/439 [00:00<00:00, 22186.47it/s]\n"
      ]
     }
    ],
    "source": [
     "from concurrent.futures import ProcessPoolExecutor\n",
     "\n",
-    "PS_size=1\n",
+    "PS_size=1.5\n",
     "detmask_file = output_mask_file\n",
     "pts_cat = \"../../../eRASS1_Main.v1.1.fits\"\n",
     "cheesemask_file = os.path.join(os.path.dirname(detmask_file), f'cheesemask_PS_{PS_size}arcmin.fits')\n",
@@ -366,21 +367,14 @@
     "# Fix the masking radius to 1arcmin. Needs to be modified for more accurate analysis.\n",
     "ext_src = np.zeros(len(ra_src)) + (PS_size / 60)\n",
     "\n",
-    "def circle(X, Y):\n",
-    "    x, y = np.meshgrid(X, Y)\n",
-    "    rho = np.sqrt(x * x + y * y)\n",
-    "    return rho\n",
-    "\n",
     "x = np.arange(ysize)\n",
     "y = np.arange(xsize)\n",
     "for j in tqdm(range(len(ra_src))):\n",
     "    pixim = ima_wcs.all_world2pix([[float(ra_src[j]), float(dec_src[j])]], 0)\n",
-    "    xp = pixim[0][0]\n",
-    "    yp = pixim[0][1]\n",
-    "    rho = circle(x - xp, y - yp) * pix2deg\n",
-    "    ii = np.where(rho <= ext_src[j])\n",
-    "    if len(ii[0]) > 0:\n",
-    "        mask[ii] = 0\n",
+    "    xp = int(pixim[0][0])\n",
+    "    yp = int(pixim[0][1])\n",
+    "    radius = int(ext_src[j] / pix2deg)\n",
+    "    cv2.circle(mask, (xp, yp), radius, 0, thickness=-1)\n",
     "\n",
     "hdu = fits.PrimaryHDU(mask)\n",
     "hdu.header.update(ima_wcs.to_header())\n",
@@ -390,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
